--- a/pom.xml
+++ b/pom.xml
@@ -5,30 +5,119 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>HerokuAppQA</artifactId>
+    <artifactId>SauceDemoQA</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <aspectj.version>1.9.20.1</aspectj.version>
+        <allure.version>2.24.0</allure.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <testng.version>7.10.2</testng.version>
+        <selenium.version>4.34.0</selenium.version>
+        <suiteXmlFile>src/test/resources/CrossBrowserTest.xml</suiteXmlFile>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <retry.count>5</retry.count>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-bom</artifactId>
+                <version>${allure.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <!-- Selenium WebDriver -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.34.0</version>
+            <version>${selenium.version}</version>
         </dependency>
 
         <!-- TestNG -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.10.2</version>
+            <version>${testng.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <!-- AssertJ -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.27.4</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Allure -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Aspect-J -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectj.version}</version>
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>    <version>3.0.0-M4</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>        </suiteXmlFiles>
+                    <argLine>
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                    </argLine>
+                    <!-- Добавляем системные свойства для Retry -->
+                    <systemProperties>
+                        <property>
+                            <name>retry.count</name>
+                            <value>${retry.count}</value>
+                        </property>
+                    </systemProperties>
+                </configuration> </plugin>
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>2.12.0</version>
+            </plugin>
+            <!-- Плагины (если нужны) -->
+        </plugins>
+    </build>
+
+    <!-- Добавляем профили для разных конфигураций Retry -->
+    <profiles>
+        <profile>
+            <id>retry-3</id>
+            <properties>
+                <retry.count>3</retry.count>
+            </properties>
+        </profile>
+        <profile>
+            <id>retry-10</id>
+            <properties>
+                <retry.count>10</retry.count>
+            </properties>
+        </profile>
+        <profile>
+            <id>no-retry</id>
+            <properties>
+                <retry.count>0</retry.count>
+            </properties>
+        </profile>
+    </profiles>
 </project>
