--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -5,11 +5,17 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+    schedule:
+      -cron: "0 18 * * 5"
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
+
+    env:
+      USER: ${{secrets.SD_USER}}
+      PASSWORD: ${{secrets.SD_PASSWORD}}
 
     steps:
       - name: Checkout
@@ -21,4 +27,4 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Run tests
-        run: mvn clean test
+        run: mvn clean test -Duser=$USER -Dpassword=$PASSWORD
