--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -5,59 +5,46 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  schedule:
-    - cron: "0 18 * * 5"  # каждый пятничный день в 18:00 UTC
+    schedule:
+      - cron: "0 18 * * 5"
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     env:
-      USER: ${{ secrets.SD_USER }}
-      PASSWORD: ${{ secrets.SD_PASSWORD }}
+      USER: ${{secrets.SD_USER}}
+      PASSWORD: ${{secrets.SD_PASSWORD}}
 
     steps:
-      # 1. Клонируем репозиторий
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
-
-      # 2. Устанавливаем JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-
-      # 3. Запускаем тесты
       - name: Run tests
-        run: mvn clean test -Duser=${{ secrets.SD_USER }} -Dpassword=${{ secrets.SD_PASSWORD }}
-
-      # 4. Получаем историю Allure из gh-pages (если есть)
+        run: mvn clean test -Duser=$USER -Dpassword=$PASSWORD
       - name: Get Allure history
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
         if: always()
         continue-on-error: true
         with:
           ref: gh-pages
           path: gh-pages
-
-      - name: Copy Allure history
+      - name: Allure Report action from marketplace
+        uses: simple-elf/allure-report-action@master
         if: always()
-        run: |
-          if [ -d gh-pages/allure-history ]; then
-            cp -r gh-pages/allure-history allure-history
-          fi
-
-      # 5. Генерируем Allure отчет с историей
-      - name: Generate Allure report
-        run: allure generate target/allure-results --clean -o allure-report --history allure-history
-
-      # 6. Деплой на GitHub Pages
-      - name: Deploy Allure report to GitHub Pages
+        with:
+          allure_results: target/allure-results
+          allure_history: allure-history
+      - name: Deploy report to Github Pages
         if: always()
         uses: peaceiris/actions-gh-pages@v2
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: allure-report
-          publish_branch: gh-pages
+        env:
+          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: allure-history
